changes are made

--- a/news.html
+++ b/news.html
@@ -88,6 +88,13 @@
 					  <a href="index.html#About" class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">About Us</a>
 					</li>
 					<li>
+						<a
+						  href="./news.html"
+						  class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+						  >Pet News</a
+						>
+					  </li>
+					<li>
 					  <a href="./blog.html" class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Blogs</a>
 					</li>
 					<li>
