--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 >
                   <a
                     href="volunteer.html"
-                    class="block px-4 py-2 text-base text-gray-300 hover:bg-gray-400 hover:text-white"
+                    class="block px-4 py-2 text-base text-gray-600 hover:bg-gray-400 hover:text-white"
                     >Become a Volunteer</a
                   >
                 </div>
@@ -236,7 +236,7 @@
       <div class="py-8 lg:py-16 px-4 mx-auto max-w-screen-md">
         <p id="About"></p>
         <h2
-          class="mb-8 text-7xl tracking-tight hover:underline underline-offset-4 turn-yellow-hover antialiased font-extrabold text-center text-gray-900 dark:text-white text_3"
+          class="mb-8 text-7xl tracking-tight underline-offset-4 turn-yellow-hover antialiased font-extrabold text-center text-gray-900 dark:text-white text_3"
           style="padding-top: 120px; padding-bottom: 25px"
         >
           About Us
@@ -291,7 +291,7 @@
         <h1
           class="m-heading text-3xl lg:text-6xl hover:shadow-2xl antialiased hover:subpixel-antialiased"
         >
-          Meet our Friends Here
+          Meet Our Friends Here
         </h1>
       </div>
       <br />
