Updated adopt.html contact form
 I added to enhance the button:

Applied a gradient background color to make it more visually appealing.
Adjusted padding and font sizes for better alignment and readability.
Added hover effects to change background and text color when hovering over the button.
Used rounded corners for a softer appearance.
Added transition effects for smooth hover interactions.
This should make the "Contact Us" button stand out more on your website and encourage users to click on it.

--- a/adopt.html
+++ b/adopt.html
@@ -163,24 +163,15 @@
               >
             </li>
             <li>
-              <a href="./index.html#contact">
-                <button
-                  class="inline-flex items-center bg-header-orange-light border-0 py-2 lg:py-2 text-base px-2 focus:outline-none text_4 font-bold rounded text-base mt-4 md:mt-0"
-                >
+              <a href="./index.html#contact" class="inline-block">
+                <button class="inline-flex items-center bg-gradient-to-r from-header-orange to-header-orange-light border-0 py-2 lg:py-2 text-base px-4 focus:outline-none text-white font-bold rounded-full mt-4 md:mt-0 hover:bg-header-orange-dark hover:text-white transition duration-300 ease-in-out">
                   Contact Us
-                  <svg
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    class="w-4 h-4 ml-1"
-                    viewBox="0 0 24 24"
-                  >
+                  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                     <path d="M5 12h14M12 5l7 7-7 7"></path>
                   </svg>
                 </button>
               </a>
+            </a>  
             </li>
             <li>
               <a id="theme-toggle">
