--- a/blog.html
+++ b/blog.html
@@ -37,8 +37,8 @@
   </head>
 
   <body>
-    <header
-      class="header text-gray-400 bg-header-offwhite body-font flex flex-row items-center justify-center lg:justify-around"
+   <header
+      class="header text-gray-400 bg-header-offwhite body-font flex flex-row items-center justify-center lg:justify-around "
       id="header"
     >
       <div
@@ -54,6 +54,12 @@
           />
         </a>
         <span class="mission-2 mission-dark"> Saving Animals </span>
+        <!--
+      <div class="w-full mt-8 md:mt-0">
+        <h1 class="text-4xl text_2  text-center md:text-left md:ml-12 uppercase font-serif font-bold " id = "heading-adopt-me">Adopt
+          today!</h1>
+        <p class="text-lg text-gray-400 text-center md:text-left md:ml-12 mt-2">Give life to a needed animal</p>
+      </div> -->
       </div>
       <button
         data-collapse-toggle="navbar-default"
@@ -80,48 +86,39 @@
       </button>
       <nav class="">
         <div class="hidden w-full lg:block z-2" id="navbar">
-          <ul
-            class="w-[100vw] h-1/2 top-0 right-0 p-8 lg:p-4 mt-12 lg:mt-0 text-center text-base lg:text-[18px] space-y-4 lg:space-y-0 lg:space-x-5 lg:static lg:w-auto flex flex-col rounded-lg items-start lg:items-center lg:bg-transparent lg:border-0 lg:flex-row justify-between"
-          >
-            <li>
-              <a
-                href="./index.html"
-                class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
-                >Home</a
-              >
-            </li>
+          <ul class="w-[100vw] h-1/2 top-0 right-0 p-8 lg:p-4 mt-12 lg:mt-0 text-center text-base lg:text-sm space-y-4 lg:space-y-0 lg:space-x-3 lg:mr-2 lg:static lg:w-auto flex flex-col rounded-lg items-center lg:items-center lg:bg-transparent lg:border-0 lg:flex-row justify-between">
             <li>
               <a
                 href="./index.html#meet"
-                class="lg:p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+                class="lg:mr-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
                 >Meet Pets</a
               >
             </li>
             <li>
               <a
                 href="./index.html#About"
-                class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+                class="lg:mr-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
                 >About Us</a
               >
             </li>
             <li>
               <a
                 href="./news.html"
-                class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+                class="lg:mr-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
                 >Pet News</a
               >
             </li>
             <li>
               <a
                 href="./blog.html"
-                class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+                class="lg:mr-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
                 >Blogs</a
               >
             </li>
             <li>
               <a
                 href="./donate.html"
-                class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+                class="lg:mr-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
                 >Donate</a
               >
             </li>
@@ -159,7 +156,7 @@
                 >
                   <a
                     href="volunteer.html"
-                    class="block px-4 py-2 text-base text-gray-300 hover:bg-gray-400 hover:text-white"
+                    class=" mr-3 block px-4 py-2 text-base text-gray-600 hover:bg-gray-400 hover:text-white"
                     >Become a Volunteer</a
                   >
                 </div>
@@ -168,14 +165,14 @@
             <li>
               <a
                 href="./reportstary.html"
-                class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+                class=" mr -3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
                 >SOS Report</a
               >
             </li>
             <li>
-              <a href="./index.html#contact">
+              <a href="#contact">
                 <button
-                  class="inline-flex items-center bg-header-orange-light border-0 py-2 lg:py-2 text-choco text-base px-2 focus:outline-none text_4 font-bold rounded mt-4 md:mt-0 hover:translate-x-2 transition-transform"
+                  class=" mr-3 inline-flex items-center bg-header-orange-light border-0 py-2 lg:py-2 text-choco text-base px-2 focus:outline-none text_4 font-bold rounded mt-4 md:mt-0 hover:translate-x-2 transition-transform"
                 >
                   Contact Us
                   <svg
@@ -194,10 +191,7 @@
             </li>
             <li>
               <a id="theme-toggle">
-                <i
-                  class="ri-sun-line turn-yellow-hover light-theme"
-                  id="switch"
-                ></i>
+                <i class="ri-sun-line turn-yellow-hover light-theme" id="switch"></i>
               </a>
             </li>
             <!-- google translate -->
@@ -211,7 +205,6 @@
         </div>
       </nav>
     </header>
-
     <!---Blogs container-->
     <section class="main-body-section">
       <div class="container max-w-5xl mx-auto">
