--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
   <body>
     <header
-      class="header text-gray-400 bg-header-offwhite body-font flex flex-row items-center justify-center lg:justify-around"
+      class="header text-gray-400 bg-header-offwhite body-font flex flex-row items-center justify-center lg:justify-around "
       id="header"
     >
       <div
@@ -80,39 +80,39 @@
       </button>
       <nav class="">
         <div class="hidden w-full lg:block z-2" id="navbar">
-          <ul class="w-[100vw] h-1/2 top-0 right-0 p-8 lg:p-4 mt-12 lg:mt-0 text-center text-base lg:text-lg space-y-4 lg:space-y-0 lg:space-x-5 lg:static lg:w-auto flex flex-col rounded-lg items-center lg:items-center lg:bg-transparent lg:border-0 lg:flex-row justify-between">
+          <ul class="w-[100vw] h-1/2 top-0 right-0 p-8 lg:p-4 mt-12 lg:mt-0 text-center text-base lg:text-sm space-y-4 lg:space-y-0 lg:space-x-3 lg:mr-2 lg:static lg:w-auto flex flex-col rounded-lg items-center lg:items-center lg:bg-transparent lg:border-0 lg:flex-row justify-between">
             <li>
               <a
                 href="#meet"
-                class="lg:p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+                class="lg:mr-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
                 >Meet Pets</a
               >
             </li>
             <li>
               <a
                 href="#About"
-                class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+                class="lg:mr-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
                 >About Us</a
               >
             </li>
             <li>
               <a
                 href="./news.html"
-                class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+                class="lg:mr-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
                 >Pet News</a
               >
             </li>
             <li>
               <a
                 href="./blog.html"
-                class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+                class="lg:mr-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
                 >Blogs</a
               >
             </li>
             <li>
               <a
                 href="./donate.html"
-                class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+                class="lg:mr-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
                 >Donate</a
               >
             </li>
@@ -150,7 +150,7 @@
                 >
                   <a
                     href="volunteer.html"
-                    class="block px-4 py-2 text-base text-gray-600 hover:bg-gray-400 hover:text-white"
+                    class=" mr-3 block px-4 py-2 text-base text-gray-600 hover:bg-gray-400 hover:text-white"
                     >Become a Volunteer</a
                   >
                 </div>
@@ -159,14 +159,14 @@
             <li>
               <a
                 href="./reportstary.html"
-                class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+                class=" mr -3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
                 >SOS Report</a
               >
             </li>
             <li>
               <a href="#contact">
                 <button
-                  class="inline-flex items-center bg-header-orange-light border-0 py-2 lg:py-2 text-choco text-base px-2 focus:outline-none text_4 font-bold rounded mt-4 md:mt-0 hover:translate-x-2 transition-transform"
+                  class=" mr-3 inline-flex items-center bg-header-orange-light border-0 py-2 lg:py-2 text-choco text-base px-2 focus:outline-none text_4 font-bold rounded mt-4 md:mt-0 hover:translate-x-2 transition-transform"
                 >
                   Contact Us
                   <svg
