icon added in all pages

--- a/adopt.html
+++ b/adopt.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./reportstary.css" />
     <link rel="stylesheet" href="./navbar.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.4.0/remixicon.css" crossorigin="">
+    <link rel="icon" type="image/x-icon" href="logo.png" />
     <!-- <link rel="stylesheet" href="./introSection.css"> -->
     <!-- <link rel="stylesheet" href="./mobileView.css"> -->
     <script
