--- a/reportstary.html
+++ b/reportstary.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="./navbar.css">
   <link rel="stylesheet" href="./mobileView.css">
   <link rel="stylesheet" href="./reportstary.css">
+  <link rel="icon" type="image/x-icon" href="logo.png" />
   <!-- <link rel="icon" type="image/x-icon" href="/Assets/Images/logo.ico"> -->
   <link rel="shortcut icon" type="image/x-icon" href="/PetMe/Assets/Images/logo.jpg">
   <script defer src="https://unpkg.com/alpinejs@3.2.4/dist/cdn.min.js"></script>
