round corner in header section

--- a/index.html
+++ b/index.html
@@ -285,8 +285,7 @@
     <!-- About Us section  html ends here -->
 
     <section class="pet-card-flex">
-      <br />
-      <br />
+      <div class="spacing"></div>
       <div>
         <h1
           class="m-heading text-3xl lg:text-6xl hover:shadow-2xl antialiased hover:subpixel-antialiased"
