added responsiveness in the blog pages

--- a/blogs/disha.html
+++ b/blogs/disha.html
@@ -21,12 +21,12 @@
         </div>
     </header>
 
-    <div class=" w-[32rem]  xl:w-[117rem] my-0 mx-0 xl:mx-auto">
-        <div class="w-[360px] xl:w-[114rem] h-[25rem] xl:h-[40rem] my-[5rem] xl:mx-auto bg-[url('./img/b4-poster.png')] bg-no-repeat bg-cover snap-center rounded-xl">
+    <div class="xl:w-[117rem] my-0 mx-0 xl:mx-auto">
+      <div class="mx-auto my-auto w-[80vw] xl:w-[114rem] md:h-[30rem] h-[25rem] xl:h-[40rem] my-[5rem] xl:mx-auto bg-[url('./img/b4-poster.png')] bg-no-repeat bg-cover snap-center rounded-xl">
 
-        </div>
+      </div>
 
-        <main class="w-full bg-white p-5 xl:p-12 rounded-lg -mt-56 items-center my-0 mx-[20px] xl:mx-auto xl:w-[80rem]">
+      <main class="max-sm:w-5/6 w-4/6 mx-auto my-auto bg-white p-5 xl:p-12 rounded-lg -mt-56 items-center my-0 mx-[20px] xl:mx-auto xl:w-[80rem]">
             <h2 class="text-3xl xl:text-5xl font-semibold uppercase tracking-wider">KEEPING DOGS HAPPY</h2>
             <div class="flex justify-between items-center my-[3rem] mx-0">
                 <div class="flex justify-between items-center">
