--- a/index.html
+++ b/index.html
@@ -80,19 +80,19 @@
       </button>
       <nav class="">
         <div class="hidden w-full lg:block z-2" id="navbar">
-          <ul class="w-[100vw] h-1/2 top-0 right-0 p-8 lg:p-4 mt-12 lg:mt-0 text-center text-base sm:text-sm space-y-4 lg:space-y-0 lg:space-x-5 lg:static lg:w-auto flex flex-col rounded-lg items-center lg:items-center lg:bg-transparent lg:border-0 lg:flex-row justify-between">
+          <ul class="w-[100vw] h-1/2 top-0 right-0 p-8 lg:p-4 mt-12 lg:mt-0 text-center text-base lg:text-lg space-y-4 lg:space-y-0 lg:space-x-5 lg:static lg:w-auto flex flex-col rounded-lg items-center lg:items-center lg:bg-transparent lg:border-0 lg:flex-row justify-between">
             <li>
               <a
                 href="#meet"
                 class="lg:p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
-                >Meet Pets</a
+                >Meet OUR Pets</a
               >
             </li>
             <li>
               <a
                 href="#About"
                 class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
-                >About Us</a
+                >ABOUT US</a
               >
             </li>
             <li>
@@ -113,7 +113,7 @@
               <a
                 href="./donate.html"
                 class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
-                >Donate</a
+                >Donate Now</a
               >
             </li>
             <li>
@@ -126,7 +126,7 @@
                   @mouseover="open = true"
                   class="text-custom-heading flex font-bold hover:underline underline-offset-4 turn-red-hover navbar-item w-full"
                 >
-                  Support Us
+                  Support Us Please
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="14px"
@@ -168,7 +168,7 @@
                 <button
                   class="inline-flex items-center bg-header-orange-light border-0 py-2 lg:py-2 text-choco text-base px-2 focus:outline-none text_4 font-bold rounded mt-4 md:mt-0 hover:translate-x-2 transition-transform"
                 >
-                  Contact Us
+                  Contact Us Now
                   <svg
                     fill="none"
                     stroke="currentColor"
@@ -291,7 +291,7 @@
         <h1
           class="m-heading text-3xl lg:text-6xl hover:shadow-2xl antialiased hover:subpixel-antialiased"
         >
-          Meet Our Friends Here
+          Meet Our Friends Here !!!
         </h1>
       </div>
       <br />
