--- a/reportstary.html
+++ b/reportstary.html
@@ -230,7 +230,10 @@
         <textarea id="comment" class="input-textarea focus:outline-green-400 border-2 border-gray-200" name="comment"
           placeholder="Enter your comment here..."></textarea>
       </div>
-
+      <p>Upload the image of the animal(optional):</p>  
+      <form action="/action_page.php">
+          <input type="file" id="myFile" name="filename">
+      </form>
       <div class="flex justify-center">
         <div class="form-group text-white">
           <button type="submit" id="submit"
