--- a/index.html
+++ b/index.html
@@ -771,36 +771,50 @@
               <span id="nameError" class="text-red-500"></span>
 
               <script>
-              function validateName(input) {
-                var nameRegex = /^[A-Za-z\- ]+$/; // Allow letters, hyphens, and spaces
+                function validateName(input) {
+                  var nameRegex = /^[A-Za-z\- ]+$/; // Allow letters, hyphens, and spaces
 
-                if (!input.value.match(nameRegex)) {
-                  document.getElementById('nameError').textContent =
-                    'Please enter a valid name with only letters, spaces, and hyphens.';
-                  input.classList.add('border-red-500');
-                } else {
-                  document.getElementById('nameError').textContent = '';
-                  input.classList.remove('border-red-500');
+                  if (input.value.trim() === '') {
+                    document.getElementById('nameError').textContent = '';
+                    input.classList.remove('border-red-500');
+                  } else if (!input.value.match(nameRegex)) {
+                    document.getElementById('nameError').textContent =
+                      'Please enter a valid name with only letters, spaces, and hyphens.';
+                    input.classList.add('border-red-500');
+                  } else {
+                    document.getElementById('nameError').textContent = '';
+                    input.classList.remove('border-red-500');
+                  }
                 }
-              }
               </script>
 
           </div>
           <div class="mb-6">
-            <label
-              class="block text_3 text-sm font-bold mb-2"
-              for="contact_email" style="color: white;"
-            >
+            <label class="block text_3 text-sm font-bold mb-2" for="contact_email" style="color: white;">
               Email
             </label>
-            <input
-              class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:shadow-outline"
-              id="contact_email"
-              name="contact_email"
-              type="email"
-              required
-              placeholder="hello@petme"
-            />
+            <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:shadow-outline"
+              id="contact_email" name="contact_email" type="email" required placeholder="hello@petme"
+              oninput="validateEmail(this)" />
+            <span id="emailError" class="text-red-500"></span>
+          
+            <script>
+              function validateEmail(input) {
+                const emailRegex = /^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$/;
+
+                if (input.value.trim() === '') {
+                  document.getElementById('emailError').textContent = '';
+                  input.classList.remove('border-red-500');
+                } else if (!input.value.match(emailRegex)) {
+                  document.getElementById('emailError').textContent =
+                    'Please enter a valid email including @.';
+                  input.classList.add('border-red-500');
+                } else {
+                  document.getElementById('emailError').textContent = '';
+                  input.classList.remove('border-red-500');
+                }
+              }
+            </script>
           </div>
           <div class="mb-6">
             <label
