Removed the white background from logo(where it seemed necessary) and replaced it with a background less logo image.

--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./navbar.css" />
     <link rel="stylesheet" href="./mobileView.css" />
     <link rel="icon" type="image/x-icon" href="/Assets/Images/logo.ico" />
-    <link rel="icon" type="image/x-icon" href="logo.png" />
+    <link rel="icon" type="image/x-icon" href="/Assets/Images/logo.png" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.4.0/remixicon.css"
@@ -255,7 +255,7 @@
           <div>
             <img
               class="rounded-full w-24 cursor-pointer"
-              src="./Assets/Images/logo.jpg"
+              src="./Assets/Images/logo.png"
               alt="logo"
               onclick="scrollToTop();"
             />
