--- a/donate.html
+++ b/donate.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="./introSection.css">
   <link rel="stylesheet" href="./navbar.css">
   <link rel="stylesheet" href="./mobileView.css">
-  <link rel="icon" type="image/x-icon" href="/Assets/Images/logo.ico">
+  <link rel="icon" type="image/x-icon" href="/Assets/Images/logo.png">
   <script defer src="https://unpkg.com/alpinejs@3.2.4/dist/cdn.min.js"></script>
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.4.0/remixicon.css" crossorigin="">
@@ -356,7 +356,7 @@
       <div class="flex flex-1 flex-col text-center sm:flex-row items-center justify-center space-x-3">
         <div>
           <a href="#top">
-            <img class="rounded-full w-24 cursor-pointer" src="./Assets/Images/logo.jpg" alt="logo" />
+            <img class="rounded-full w-24 cursor-pointer" src="./Assets/Images/logo.png" alt="logo" />
           </a>
         </div>
         <div>
