--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./introSection.css" />
     <link rel="stylesheet" href="./navbar.css" />
     <link rel="stylesheet" href="./mobileView.css" />
-    <link rel="icon" type="image/x-icon" href="logo.png" />
+    <link rel="icon" type="image/x-icon" href="/Assets/Images/logo.png" />
 
     
     <script
@@ -941,7 +941,7 @@
             <a href="#top">
               <img
                 class="rounded-full w-24 cursor-pointer hover:scale-110"
-                src="./Assets/Images/logo.jpg"
+                src="./Assets/Images/logo.png"
                 alt="logo"
               />
             </a>
