--- a/news.html
+++ b/news.html
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" href="./navbar.css">
 	<link rel="stylesheet" href="./mobileView.css">
 
-	<link rel="icon" type="image/x-icon" href="logo.png" />
+	<link rel="icon" type="image/x-icon" href="/Assets/Images/logo.png" />
 	
 
 
@@ -267,7 +267,7 @@
 			<div class="flex flex-1 flex-col text-center sm:flex-row items-center justify-center space-x-3">
 				<div>
 					<a href="#top">
-						<img class="rounded-full w-24 cursor-pointer" src="./Assets/Images/logo.jpg" alt="logo" />
+						<img class="rounded-full w-24 cursor-pointer" src="./Assets/Images/logo.png" alt="logo" />
 					</a>
 				</div>
 				<div>
