--- a/volunteer.html
+++ b/volunteer.html
@@ -16,8 +16,7 @@
     <link rel="stylesheet" href="./introSection.css">
     <link rel="stylesheet" href="./navbar.css">
     <link rel="stylesheet" href="./mobileView.css">
-    <link rel="icon" type="image/x-icon" href="/Assets/Images/logo.ico">
-    <link rel="icon" type="image/x-icon" href="logo.png" />
+    <link rel="icon" type="image/x-icon" href="/Assets/Images/logo.png" />
 
     <link
       rel="icon"
@@ -251,7 +250,7 @@
             <a href="#top">
               <img
                 class="rounded-full w-24 cursor-pointer"
-                src="./Assets/Images/logo.jpg"
+                src="./Assets/Images/logo.png"
                 alt="logo"
               />
             </a>
