--- a/reportstary.html
+++ b/reportstary.html
@@ -16,8 +16,7 @@
   <link rel="stylesheet" href="./navbar.css">
   <link rel="stylesheet" href="./mobileView.css">
   <link rel="stylesheet" href="./reportstary.css">
-  <link rel="icon" type="image/x-icon" href="logo.png" />
-  <!-- <link rel="icon" type="image/x-icon" href="/Assets/Images/logo.ico"> -->
+  <link rel="icon" type="image/x-icon" href="/Assets/Images/logo.png" />
   <link rel="shortcut icon" type="image/x-icon" href="/PetMe/Assets/Images/logo.jpg">
   <script defer src="https://unpkg.com/alpinejs@3.2.4/dist/cdn.min.js"></script>
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
@@ -274,7 +273,7 @@
         <a href="#top">
           <img
             class="rounded-full w-24 cursor-pointer hover:scale-110"
-            src="./Assets/Images/logo.jpg"
+            src="./Assets/Images/logo.png"
             alt="logo"
           />
         </a>
