Changes made in nav bar of blog and news

--- a/blog.html
+++ b/blog.html
@@ -46,7 +46,7 @@
         class="flex flex-row items-center md:flex-row md:items-center p-2"
         id="logo"
       >
-        <span class="mission-1 mission-dark"> Saving Lives </span>
+        <span class="mission-1 mission-dark xl:text-[14px]"> Saving Lives </span>
         <a class="logo-border" href="index.html">
           <img
             class="rounded-full logo-size"
@@ -54,7 +54,7 @@
             alt="logo"
           />
         </a>
-        <span class="mission-2 mission-dark"> Saving Animals </span>
+        <span class="mission-2 mission-dark xl:text-[14px]"> Saving Animals </span>
       </div>
       <button
         data-collapse-toggle="navbar-default"
@@ -82,7 +82,7 @@
       <nav class="">
         <div class="hidden w-full xl:block z-2" id="navbar">
           <ul
-            class="w-[100vw] h-1/2 top-0 right-0 p-8 xl:px-3 mt-12 xl:mt-0 text-center text-base xl:text-[18px] space-y-4 xl:space-y-0 xl:space-x-5 lg:static xl:w-auto flex flex-col rounded-lg items-center xl:items-center xl:bg-transparent xl:border-0 xl:flex-row justify-between"
+            class="w-[100vw] h-1/2 top-0 right-0 p-8 xl:px-3 mt-12 xl:mt-0 text-center text-base xl:text-[14px] space-y-4 xl:space-y-0 xl:space-x-5 lg:static xl:w-auto flex flex-col rounded-lg items-center xl:items-center xl:bg-transparent xl:border-0 xl:flex-row justify-between"
           >
             <li>
               <a
@@ -176,7 +176,7 @@
             <li>
               <a href="./index.html#contact">
                 <button
-                  class="inline-flex items-center bg-header-orange-light border-0 py-2 lg:py-2 text-choco text-base px-2 focus:outline-none text_4 font-bold rounded mt-4 md:mt-0 hover:translate-x-2 transition-transform"
+                  class="inline-flex items-center bg-header-orange-light border-0 py-2 lg:py-2 text-choco text-base xl:text-[15px] px-2 focus:outline-none text_4 font-bold rounded mt-4 md:mt-0 hover:translate-x-2 transition-transform"
                 >
                   Contact Us
                   <svg
