--- a/news.html
+++ b/news.html
@@ -39,14 +39,14 @@
 
 <body>
 	<header
-		class="header text-gray-400 bg-header-offwhite body-font flex flex-row items-center justify-center xl:justify-around"
+		class="header text-gray-400 bg-header-offwhite body-font flex flex-row items-center justify-center xl:justify-around "
 		id="header">
 		<div class="flex flex-row items-center md:flex-row md:items-center p-2" id="logo">
-			<span class="mission-1 mission-dark"> Saving Lives </span>
-			<a class="logo-border" href="index.html">
+			<span class="mission-1 mission-dark xl:text-[14px]"> Saving Lives </span>
+			<a class="logo-border " href="index.html">
 				<img class="rounded-full logo-size" src="./Assets/Images/logo.jpg" alt="logo" />
 			</a>
-			<span class="mission-2 mission-dark"> Saving Animals </span>
+			<span class="mission-2 mission-dark xl:text-[14px]"> Saving Animals </span>
 		</div>
 		<button data-collapse-toggle="navbar-default" type="button"
 			class="absolute top-7 right-4 sm:inline-flex sm:items-center p-2 xl:hidden focus:outline-none text_4"
@@ -62,11 +62,11 @@
 		<nav class="">
 			<div class="hidden w-full mb-5 xl:mb-0 xl:block z-2" id="navbar">
 				<ul
-					class="w-[100vw] h-1/2 top-0 right-0 p-8 xl:px-3 mt-12 xl:mt-0 text-center text-base xl:text-lg space-y-4 xl:space-y-0 xl:space-x-5 lg:static xl:w-auto flex flex-col rounded-lg items-center xl:items-center xl:bg-transparent xl:border-0 xl:flex-row justify-between">
+					class="w-[100vw] h-1/2 top-0 right-0 p-8 xl:px-3 mt-12 xl:mt-0 text-center text-base xl:text-[14px] space-y-4 xl:space-y-0 xl:space-x-5 lg:static xl:w-auto flex flex-col rounded-lg items-center xl:items-center xl:bg-transparent xl:border-0 xl:flex-row justify-between">
 
 					<li>
 						<a href="./index.html"
-							class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Home</a>
+							class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item ">Home</a>
 					</li>
 					<li>
 						<a href="index.html#meet"
