--- a/volunteer.html
+++ b/volunteer.html
@@ -17,13 +17,6 @@
     <link rel="stylesheet" href="./navbar.css">
     <link rel="stylesheet" href="./mobileView.css">
     <link rel="icon" type="image/x-icon" href="/Assets/Images/logo.ico">
-    <link rel="icon" type="image/x-icon" href="logo.png" />
-
-    <link
-      rel="icon"
-      type="image/x-icon"
-      href="/PetMe/Assets/Images/logo.jpg"
-    />
     <script defer src="https://unpkg.com/alpinejs@3.2.4/dist/cdn.min.js"></script>
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <title>Become a Volunteer : PetMe</title>
@@ -151,10 +144,10 @@
         <div class="container  px-5 py-24 mx-auto card backdrop-blur-sm" style="margin-top: 10vh">
             <div class="flex flex-col text-center w-full mb-12">
                 <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900">
-                    Thanks for showing your support
+                    Thank you for showing your Interest.
                 </h1>
                 <p class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-90">
-                    Fill out the form below to become volunteer.
+                    Fill out the form to become a volunteer at PetMe.
                 </p>
             </div>
             <form id="survey-form" action="https://formspree.io/f/xayaokzl" method="POST">
@@ -223,7 +216,7 @@
                         <div class="p-2 w-full">
                             <input type="checkbox" name="check" id="check" required>
                             <span class="p-1 font-medium text-gray-900">
-                                I've read and agree to the Terms and Conditions for volunteering this organisation.
+                                I've read all the Terms and Conditions.
                             </span>
                         </div>
                     </div>
@@ -247,19 +240,11 @@
         <div
           class="flex flex-1 flex-col text-center sm:flex-row items-center justify-center space-x-3"
         >
-          <div>
-            <a href="#top">
-              <img
-                class="rounded-full w-24 cursor-pointer"
-                src="./Assets/Images/logo.jpg"
-                alt="logo"
-              />
-            </a>
-          </div>
+        
           <div>
             <div class="space-y-2">
               <h3 class="text-2xl">Adopt a pet</h3>
-              <div>Give life to an animal in need</div>
+              <div>Give a new life to an Animal,By a small support.</div>
             </div>
           </div>
         </div>
@@ -269,7 +254,7 @@
           <div class="space-y-2">
             <h3 class="text-2xl">Subscribe to our newsletter</h3>
             <div class="text-md">
-              Get the latest news and updates delivered straight to your inbox.
+
             </div>
             <div class="text-center">
               <input
@@ -367,7 +352,7 @@
         <div class="space-y-2">
           <h3 class="text-2xl text-center">Subscribe to our newsletter</h3>
           <div class="text-md">
-            Get the latest news and updates delivered straight to your inbox.
+            Get the latest news and updates to your inbox.
           </div>
           <div class="text-center">
             <input
