--- a/index.html
+++ b/index.html
@@ -79,46 +79,50 @@
       <nav class="">
         <div class="hidden w-full lg:block z-2" id="navbar">
           <ul class="w-[100vw] h-1/2 top-0 right-0 p-8 lg:p-4 mt-12 lg:mt-0 text-center text-base lg:text-lg space-y-4 lg:space-y-0 lg:space-x-5 lg:static lg:w-auto flex flex-col rounded-lg items-center lg:items-center lg:bg-transparent lg:border-0 lg:flex-row justify-between">
+           <div class="nav-item">
             <li>
               <a
                 href="#meet"
-                class="lg:p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+                class="lg:p-3 text-custom-heading font-bold  underline-offset-4 turn-red-hover navbar-item"
                 >Meet Pets</a
               >
+              
             </li>
+            </div>
             <li>
               <a
                 href="#About"
-                class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+                class="text-custom-heading font-bold  underline-offset-4 turn-red-hover navbar-item"
                 >About Us</a
               >
             </li>
             <li>
               <a
                 href="./news.html"
-                class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+                class="text-custom-heading font-bold  underline-offset-4 turn-red-hover navbar-item"
                 >Pet News</a
               >
             </li>
             <li>
               <a
                 href="./blog.html"
-                class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+                class="text-custom-heading font-bold  underline-offset-4 turn-red-hover navbar-item"
                 >Blogs</a
               >
             </li>
             <li>
               <a
                 href="./donate.html"
-                class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+                class="text-custom-heading font-bold  underline-offset-4 turn-red-hover navbar-item"
                 >Donate</a
               >
             </li>
+            
             <li>
               <div x-data="{ open: false }" @mouseleave="open = false" class="relative">
                 <a
                   @mouseover="open = true"
-                  class="text-custom-heading flex font-bold hover:underline underline-offset-4 turn-red-hover navbar-item w-full"
+                  class="text-custom-heading flex font-bold  underline-offset-4 turn-red-hover navbar-item w-full"
                 >
                   Support Us
                   <svg
@@ -155,7 +159,7 @@
             <li>
               <a
                 href="./reportstary.html"
-                class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+                class="text-custom-heading font-bold  underline-offset-4 turn-red-hover navbar-item"
                 >SOS Report</a
               >
             </li>
