--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@
     </div>
     <div id="copyright">
       <p>
-        Copyright &copy; <span id="date"></span> [PetMe] All Right Reserved.
+        Copyright &copy; <span id="date"></span> [PetMe] All Rights Reserved.
       </p>
     </div>
   </footer>
