changed alignment of pet me button and styled become a volunteer

--- a/adopt.html
+++ b/adopt.html
@@ -38,7 +38,7 @@
             alt="logo"
           />
         </a>
-        <span class="mission-2"> Saving Animals </span>
+        <span class="mission-2" style="margin-left: 29px;"> Saving Animals </span>
         <!--
     <div class="w-full mt-8 md:mt-0">
       <h1 class="text-4xl text_2  text-center md:text-left md:ml-12 uppercase font-serif font-bold " id = "heading-adopt-me">Adopt
@@ -83,10 +83,12 @@
             </li>
             <li>
               <a
-                href="./index.html#meet"
-                class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
-                >Meet Pets</a
-              >
+              href="./index.html#meet"
+              class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+              style="text-align:left; display: flex; justify-content: center; margin-left:24px"
+            >
+              Meet Pets
+            </a>
             </li>
             <li>
               <a
@@ -150,7 +152,7 @@
                 >
                   <a
                     href="volunteer.html"
-                    class="block px-4 py-2 text-base text-gray-300 text-gray-700 hover:bg-amber-800 hover:text-white"
+                    class="block px-4 py-2 text-base   hover:bg-grey-800 hover:text-white"
                     >Become a Volunteer</a
                   >
                 </div>
