--- a/blog.html
+++ b/blog.html
@@ -160,7 +160,7 @@
                 >
                   <a
                     href="volunteer.html"
-                    class="block px-4 py-2 text-base text-gray-300 hover:bg-gray-400 hover:text-white"
+                    class="block px-4 py-2 text-base text-gray-300 hover:bg-indigo-700 hover:text-yellow-200"
                     >Become a Volunteer</a
                   >
                 </div>
