--- a/news.html
+++ b/news.html
@@ -104,7 +104,7 @@
 							<div x-show="open"
 								class="z-20 absolute -left-1 w-[7.5rem] py-2 bg-gray-100 rounded-md shadow-xl">
 								<a href="volunteer.html"
-									class="block px-4 py-2 text-base text-gray-700 hover:bg-gray-400 hover:text-white">Become
+									class="block px-4 py-2 text-base text-gray-700 hover:bg-indigo-700 hover:text-yellow-200">Become
 									a Volunteer</a>
 							</div>
 						</div>
