--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 >
                   <a
                     href="volunteer.html"
-                    class="block px-4 py-2 text-base text-gray-600 hover:bg-gray-400 hover:text-white"
+                    class="block px-4 py-2 text-base text-gray-600 hover:bg-indigo-700 hover:text-yellow-200"
                   >
                     Become a Volunteer
                   </a>
