--- a/index.html
+++ b/index.html
@@ -719,77 +719,103 @@
           </div>
         </div>
       </div>
-    </section>
-    <!-- style="opacity: 0; transform: translateX(50px); transition: opacity 1s ease, transform 1s ease;"   -->
-   <!-- Contact us section html starts from here -->
-<section id="contact" class="dark:bg-gray-900 b_1 pt-40 pb-20">
-  <div class="w-full contact-form-container mx-auto max-w-screen-md" id="contactFormContainer">
-    <form
-      action="https://formspree.io/f/xayaokzl"
-      method="POST"
-      class="bg-black rounded-md main-bg-clip-padding backdrop-filter backdrop-blur-sm bg-opacity-20 border border-gray-100 px-8 pt-8 pb-10"
-    >
-      <p id="contact"></p>
-      <h2 class="text-3xl mt-1 mb-2 text-center bold-500 text_3 contact-form-text" style="color: white;">
-        CONTACT US
-      </h2>
-      <p class="text-base text-center text_3 contact-form-text" style="color: white;">
-        Any issues! Fill the form below and our team will contact you shortly.
-      </p>
-      <br />
-      <div class="mb-4">
-        <label class="block text_3 text-sm font-bold mb-2 contact-form-text" for="contact_nom" style="color: white;">
-          Name
-        </label>
-        <input
-          class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:shadow-outline"
-          id="contact_nom"
-          name="contact_nom"
-          type="text"
-          placeholder="Name"
-          oninput="validateName(this)"
-        />
-        <span id="nameError" class="text-red-500"></span>
-      </div>
-      <div class="mb-6">
-        <label class="block text_3 text-sm font-bold mb-2 contact-form-text" for="contact_email" style="color: white;">
-          Email
-        </label>
-        <input
-          class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:shadow-outline"
-          id="contact_email"
-          name="contact_email"
-          type="email"
-          required
-          placeholder="hello@petme"
-          oninput="validateEmail(this)"
-        />
-        <span id="emailError" class="text-red-500"></span>
-      </div>
-      <div class="mb-6">
-        <label for="contact_message" class="block text_3 text-sm font-bold mb-2 contact-form-text" style="color: white;">
-          Message
-        </label>
-        <textarea
-          class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:shadow-outline"
-          id="contact_message"
-          name="contact_message"
-          required
-          rows="6"
-          placeholder="Your message"
-        ></textarea>
-      </div>
-      <div class="flex justify-center">
-        <button
-          class="bg-amber-800 hover-button hover:bg-amber-700 text-center text_3 font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline "
-          type="submit"
-        >
-          Submit
-        </button>
-      </div>
-    </form>
-  </div>
-</section>
+    </div>
+  </section>
+  <!-- style="opacity: 0; transform: translateX(50px); transition: opacity 1s ease, transform 1s ease;"   -->
+  <!--     Contact us section html starts from here -->
+  <section id="contact" class="dark:bg-gray-900 b_1 pt-40 pb-20">
+    <div class="w-full contact-form-container mx-auto max-w-screen-md" id="contactFormContainer">
+      <form action="https://formspree.io/f/xayaokzl" method="POST"
+        class="bg-black rounded-md main-bg-clip-padding backdrop-filter backdrop-blur-sm bg-opacity-20 border border-gray-100 px-8 pt-8 pb-10">
+        <p id="contact"></p>
+        <h2 class="text-3xl mt-1 mb-2 text-center bold-500 text_3 contact-form-text" style="color: white;">
+          CONTACT US
+        </h2>
+        <p class="text-base text-center text_3 contact-form-text" style="color: white;">
+          Any issues! Fill the form below and our team will contact you
+          shortly.
+        </p>
+        <br />
+        <div class="mb-4">
+          <label class="block text_3 text-sm font-bold mb-2 contact-form-text" for="contact_nom" style="color: white;">
+            Name
+          </label>
+          <!-- <input
+              class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:shadow-outline"
+              id="contact_nom"
+              name="contact_nom"
+              type="text"
+              placeholder="Name"
+            /> -->
+          <input
+            class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:shadow-outline"
+            id="contact_nom" name="contact_nom" type="text" placeholder="Name" oninput="validateName(this)" />
+
+          <span id="nameError" class="text-red-500"></span>
+
+          <script>
+            function validateName(input) {
+              var nameRegex = /^[A-Za-z\- ]+$/; // Allow letters, hyphens, and spaces
+
+              if (input.value.trim() === '') {
+                document.getElementById('nameError').textContent = '';
+                input.classList.remove('border-red-500');
+              } else if (!input.value.match(nameRegex)) {
+                document.getElementById('nameError').textContent =
+                  'Please enter a valid name with only letters, spaces, and hyphens.';
+                input.classList.add('border-red-500');
+              } else {
+                document.getElementById('nameError').textContent = '';
+                input.classList.remove('border-red-500');
+              }
+            }
+          </script>
+
+        </div>
+        <div class="mb-6">
+          <label class="block text_3 text-sm font-bold mb-2 contact-form-text" for="contact_email" style="color: white;">
+            Email
+          </label>
+          <input
+            class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:shadow-outline"
+            id="contact_email" name="contact_email" type="email" required placeholder="hello@petme"
+            oninput="validateEmail(this)" />
+          <span id="emailError" class="text-red-500"></span>
+
+          <script>
+            function validateEmail(input) {
+              const emailRegex = /^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$/;
+
+              if (input.value.trim() === '') {
+                document.getElementById('emailError').textContent = '';
+                input.classList.remove('border-red-500');
+              } else if (!input.value.match(emailRegex)) {
+                document.getElementById('emailError').textContent =
+                  'Please enter a valid email including @.';
+                input.classList.add('border-red-500');
+              } else {
+                document.getElementById('emailError').textContent = '';
+                input.classList.remove('border-red-500');
+              }
+            }
+          </script>
+        </div>
+        <div class="mb-6">
+          <label for="contact_message" class="block text_3 text-sm font-bold mb-2 contact-form-text" style="color: white;">Message</label>
+          <textarea
+            class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:shadow-outline"
+            id="contact_message" name="contact_message" required rows="6" placeholder="Your message"></textarea>
+        </div>
+        <div class="flex justify-center">
+          <button
+            class="bg-amber-800 hover-button hover:bg-amber-700 text-center text_3  font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+            type="submit">
+            Submit
+          </button>
+        </div>
+      </form>
+    </div>
+  </section>
 
 
     <script>
