footer text color changed in both light and dark themes

--- a/index light.html
+++ b/index light.html
@@ -386,7 +386,7 @@
           <img class="rounded-full w-[80px] h-[80px]" src="./Assets/Images/logo.jpg" alt="logo" />
         </a>
         <div class="flex flex-col justify-start flex-auto grow-[2]">
-          <span class="text-4xl text-gray-100 pb-[8px]">Adopt today</span>
+          <span class="text-4xl" style="color:#1f2323;">Adopt today</span>
           <span class="text-lg text-gray-800">Give life to a needed animal</span>
         </div>
       </div>
