--- a/index.html
+++ b/index.html
@@ -784,7 +784,7 @@
           </a>
         </div>
         <div>
-          <div class="space-y-2">
+          <div class="space-y-2 " style="color:rgb(0, 0, 0);">
             <h3 class="text-2xl font-medium">Adopt a pet</h3>
             <div>Give life to an animal in need</div>
           </div>
@@ -794,8 +794,8 @@
       <!-- Subscribe column -->
       <div class="md:flex flex-col hidden text-center items-center flex-1">
         <form id="subscription-form">
-          <div class="space-y-2">
-            <h3 class="text-2xl font-medium">Subscribe to our newsletter</h3>
+          <div class="space-y-2" style="color:#f1f4f9">
+            <h3 class="text-2xl text-center" style="color:#f1f5f9">Subscribe to our newsletter</h3>
             <div class="text-md">
               Get the latest news and updates delivered straight to your inbox.
             </div>
