--- a/index.html
+++ b/index.html
@@ -784,7 +784,7 @@
           </a>
         </div>
         <div>
-          <div class="space-y-2 " style="color:rgb(0, 0, 0);">
+          <div class="space-y-2 " style="color:#f1f5f9;">
             <h3 class="text-2xl font-medium">Adopt a pet</h3>
             <div>Give life to an animal in need</div>
           </div>
