--- a/donate.html
+++ b/donate.html
@@ -78,13 +78,17 @@
       margin-left: 0.2rem;
     }
 
+    .donate-section input::placeholder{
+      color: rgba(0, 0, 0, 0.481);
+    }
+
     #submit_button {
 
       display: flex;
       margin-left: auto;
       margin-right: auto;
       color: white;
-      background-color: #90400E;
+      background-color: #5a2809;
       border: none;
       padding-top: 0.5rem;
       padding-bottom: 0.5rem;
@@ -96,7 +100,7 @@
     }
 
     #submit_button:hover {
-      background-color: #c15a1b;
+      background-color: #080300;
 
     }
   </style>
@@ -186,14 +190,14 @@
     </nav>
   </header>
 
-  <section class="text-gray-600 body-font relative bg-[url('Assets/Images/pet-don.jpg')] bg-center bg-no-repeat
+  <section class="text-gray-600 body-font relative bg-[url('Assets/Images/pet-don.jpg')] bg-center bg-no-repeat bg-dog
         bg-cover donate-section">
-    <div class="container px-5 py-24 mx-auto card backdrop-blur-sm">
+        <div class="container px-5 py-24 bg-donate bg-opacity-80 mx-auto card backdrop-blur-sm">
       <div class="flex flex-col text-center w-full mb-12">
-        <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900" style="padding-top: 15px;">
+        <h1 class="sm:text-3xl text-2xl donate-h1 font-medium title-font mb-4 text-amber-900" style="padding-top: 15px;">
           Donate Animals
         </h1>
-        <p class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-90">
+        <p class="sm:text-3xl text-2xl donate-h2 font-medium title-font mb-4 text-amber-900">
           Fill up the form below and donate your pets.
         </p>
       </div>
@@ -265,7 +269,7 @@
             <div class="p-2 w-1/2">
               <div class="relative">
                 <label for="number" class="leading-7 text-sm text-gray-900">Contact Number</label>
-                <input type="text" id="contact" name="contact" autocomplete="off" placeholder="+91 0123456789"
+                <input type="text" id="contact" name="contact" autocomplete="off" placeholder="+91 01234 56789"
                   onchange="displayErrorMsg(this.name)"
                   class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
                   oninput="this.value = this.value.replace(/[^0-9\+\.]/g, '').replace(/(\..*)\./g, '$1');" required />
@@ -334,7 +338,7 @@
             </div>
             <div class="p-2 w-full">
               <input type="checkbox" name="check" id="check" required>
-              <span class="p-1 font-medium text-gray-900">
+              <span class="leading-7 p-1 font-medium text-gray-900">
                 I've read and agree to the Terms and Conditions of PetMe.
               </span>
             </div>
@@ -414,6 +418,15 @@
                 <path
                   d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
               </svg>
+            </a>
+          </div>
+          <div class="hover:scale-110 transition-all">
+            <a href="https://www.linkedin.com/in/akshita-gupta-a4a895187/?originalSubdomain=in" target="_blank" class="w-10 ml-3 mr-3">
+              <!-- Linkedin icon -->
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="30" height="30" class="fill-white" viewBox="0 0 20 20">
+                <path fill="#FFFFFF" d="M21,21H17V14.25C17,13.19 15.81,12.31 14.75,12.31C13.69,12.31 13,13.19 13,14.25V21H9V9H13V11C13.66,9.93 15.36,9.24 16.5,9.24C19,9.24 21,11.28 21,13.75V21M7,21H3V9H7V21M5,3A2,2 0 0,1 7,5A2,2 0 0,1 5,7A2,2 0 0,1 3,5A2,2 0 0,1 5,3Z" />
+              </svg>
+
             </a>
           </div>
         </div>
