changed footer color

--- a/index.html
+++ b/index.html
@@ -784,8 +784,8 @@
           </a>
         </div>
         <div>
-          <div class="space-y-2">
-            <h3 class="text-2xl font-medium">Adopt a pet</h3>
+          <div class="changes">
+            <h3 class="changes">Adopt a pet</h3>
             <div>Give life to an animal in need</div>
           </div>
         </div>
@@ -795,8 +795,8 @@
       <div class="md:flex flex-col hidden text-center items-center flex-1">
         <form id="subscription-form">
           <div class="space-y-2">
-            <h3 class="text-2xl font-medium">Subscribe to our newsletter</h3>
-            <div class="text-md">
+            <h3 class="changes">Subscribe to our newsletter</h3>
+            <div class="changes">
               Get the latest news and updates delivered straight to your inbox.
             </div>
             <div class="text-center">
