--- a/reportstary.html
+++ b/reportstary.html
@@ -301,9 +301,9 @@
     <!-- Subscribe column -->
     <div class="md:flex flex-col hidden text-center items-center flex-1">
       <form id="subscription-form">
-      <div class="space-y-2">
-        <h3 class="text-2xl">Subscribe to our newsletter</h3>
-        <div class="text-md">
+      <div class="changes">
+        <h3 class="changes">Subscribe to our newsletter</h3>
+        <div class="changes">
           Get the latest news and updates delivered straight to your inbox.
         </div>
         <div class="text-center">
@@ -402,9 +402,9 @@
   <div
     class="pt-5 pb-8 flex flex-col text-center md:hidden mt-8 items-center flex-1"
   >
-    <div class="space-y-2">
-      <h3 class="text-2xl text-center">Subscribe to our newsletter</h3>
-      <div class="text-md">
+    <div class="changes">
+      <h3 class="changes">Subscribe to our newsletter</h3>
+      <div class="changes">
         Get the latest news and updates delivered straight to your inbox.
       </div>
       <div class="text-center">
