--- a/volunteer.html
+++ b/volunteer.html
@@ -257,8 +257,8 @@
             </a>
           </div>
           <div>
-            <div class="space-y-2">
-              <h3 class="text-2xl">Adopt a pet</h3>
+            <div class="changes">
+              <h3 class="changes">Adopt a pet</h3>
               <div>Give life to an animal in need</div>
             </div>
           </div>
@@ -266,9 +266,9 @@
 
         <!-- Subscribe column -->
         <div class="md:flex flex-col hidden text-center items-center flex-1">
-          <div class="space-y-2">
-            <h3 class="text-2xl">Subscribe to our newsletter</h3>
-            <div class="text-md">
+          <div class="changes">
+            <h3 class="changes">Subscribe to our newsletter</h3>
+            <div class="changes">
               Get the latest news and updates delivered straight to your inbox.
             </div>
             <div class="text-center">
