fix support and donate

--- a/blog.html
+++ b/blog.html
@@ -182,7 +182,7 @@
     </header>
 
     <!---Blogs container-->
-    <section class="main-body-section bg-blog bg-white-200">
+    <section class="main-body-section bg-blog bg-opacity-90 bg-white-200">
       <div class="container max-w-5xl mx-auto">
         <img src="./Assets/cats-dogs.jpg" class="mt-32" />
         <h1
