--- a/donate1.html
+++ b/donate1.html
@@ -109,7 +109,7 @@
         </li>
         <li>
           <a id="theme-toggle">
-            <i class="ri-sun-line turn-yellow-hover light-theme" id="switch"></i>
+            <i class="ri-sun-line turn-red-hover light-theme" id="switch"></i>
           </a>
         </li>
         <!-- google translate -->
