--- a/volunteer.html
+++ b/volunteer.html
@@ -30,12 +30,15 @@
     <style>
         #survey-form{
             /* border: 1px solid black; */
-            padding-top: 50px;
             padding-bottom: 50px;
             border-radius: 20px;
             margin: 50px;
             /* width: 1200px; */
             /* background-color: black; */
+        }
+
+        #survey-form input::placeholder{
+          color: rgba(0, 0, 0, 0.481);
         }
     </style>
 </head>
@@ -132,9 +135,9 @@
 
     <section class="text-gray-600 body-font relative bg-[url('Assets/Images/pet-don.jpg')] bg-center bg-no-repeat
         bg-cover">
-        <div class="container  px-5 py-24 mx-auto card backdrop-blur-sm" style="margin-top: 10vh">
+        <div class="container  px-5 py-24 mx-auto bg-donate bg-opacity-80 card backdrop-blur-sm" style="margin-top: 10vh">
             <div class="flex flex-col text-center w-full mb-12">
-                <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900">
+                <h1 class="sm:text-3xl text-2xl donate-h1 font-medium title-font mb-4 text-gray-900">
                     Thanks for showing your support
                 </h1>
                 <p class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-90">
@@ -196,7 +199,7 @@
                             <div class="relative">
                                 <label for="number" class="leading-7 text-sm text-gray-900">Contact Number</label>
 
-                                <input type="text" id="number" name="number" placeholder="+91 0123456789"
+                                <input type="text" id="number" name="number" placeholder="+91 01234 56789"
                                     class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
                                     oninput="this.value = this.value.replace(/[^0-9\+\.]/g, '').replace(/(\..*)\./g, '$1');"
                                     required />
@@ -206,7 +209,7 @@
 
                         <div class="p-2 w-full">
                             <input type="checkbox" name="check" id="check" required>
-                            <span class="p-1 font-medium text-gray-900">
+                            <span class="leading-7 p-1 font-medium text-gray-900">
                                 I've read and agree to the Terms and Conditions for volunteering this organisation.
                             </span>
                         </div>
