git commit "changes in css"

--- a/index.html
+++ b/index.html
@@ -393,8 +393,7 @@
                 </li>
               </ul>
               <a class="self-center" href="adopt.html">
-                <button type="button" class="hover-button">Adopt me</button></a
-              >
+                <button type="button" class="hover-button">Adopt me</button></a>
             </div>
           </div>
         </div>
