--- a/index.html
+++ b/index.html
@@ -105,7 +105,11 @@
                 class="text-custom-heading font-bold  underline-offset-4 turn-red-hover navbar-item"
                 >Donate</a
               >
-            </li>
+              <a
+              href="./Contact.html"
+              class="text-custom-heading font-bold  underline-offset-4 turn-red-hover navbar-item"
+              >Contact Us</a
+          
             
             <li>
 
