--- a/news.html
+++ b/news.html
@@ -220,30 +220,73 @@
 
 		</div>
 		<div class="relative w-[17.5rem] sm:w-[15.5rem] md:w-[19rem] lg:w-[27rem] xl:w-[35rem] h-80 flex justify-center items-center flex-col opacity-80"
-			style="display: flex;border-radius: 4px;align-items: center;justify-content: center;position:relative;box-shadow: #ddd;margin: auto;width: fit-content;height:min-content;padding-bottom:5%;padding-right:8%;background-color:#86412d4d;">
-			<h1 class="text-3xl mt-28 ml-10" style="color:white;"><strong>Dog rescued after getting its head stuck in
-					wheel rim</strong></h1>
-		</div>
-		<div class="text-lg ml-10 mt-8 sm:mb-28 sm:w-10/12  flex sm:flex-row flex-col"
-			style="display: flex;border-radius: 4px;padding: 5px;align-items: center;justify-content: center;position:relative;box-shadow: #ddd;margin: auto;background-color:#090a0a4d;max-width:95%">
+    style="display: flex; border-radius: 4px; align-items: center; justify-content: center; position:relative; box-shadow: #ddd; margin: auto; width: fit-content; height:min-content; padding-bottom:5%; padding-right:8%; background-color:#86412d4d;">
+    <h1 class="text-3xl mt-28 ml-10" style="color:white;"><strong>Dog rescued after getting its head stuck in
+            wheel rim</strong></h1>
+</div>
+<div class="text-lg ml-10 mt-8 sm:mb-28 sm:w-10/12 flex sm:flex-row flex-col"
+    style="display: flex; border-radius: 4px; padding: 5px; align-items: center; justify-content: center; position:relative; box-shadow: #ddd; margin: auto; background-color:#090a0a4d; max-width:95%">
+    <img class="relative ml-14 w-56 h-56 object-cover rounded-2xl shadow-lg shadow-red-700/50"
+        src="Assets/Images/dog_rescue.png" style="margin-top: 5px; margin-bottom: 5px;">
+    <span style="padding:20px; text-align: justify; font-family: 'Josefin Sans', sans-serif; color:white;">
+        <strong>
+            A dog has been rescued from a tight spot by Queensland firefighters armed with a bottle of olive oil
+            and a lot of patience. The puppy, named Bonnie, stuck its head through the middle of a wheel rim but couldn't pull itself
+            back out. It was up to the firefighters at Mareeba Fire and Rescue to figure out a solution to the sticky
+            situation. "We hear she's recovering well."
+        </strong>
+    </span>
+</div>
 
-			<img class="relative ml-14 w-56 h-56  object-cover rounded-2xl shadow-lg shadow-red-700/50 "
-				src="Assets/Images/dog_rescue.png" style="margin-top: 5px;margin-bottom: 5px;">
+<div class="relative w-[17.5rem] sm:w-[15.5rem] md:w-[19rem] lg:w-[27rem] xl:w-[35rem] h-80 flex justify-center items-center flex-col opacity-80"
+    style="display: flex; border-radius: 4px; align-items: center; justify-content: center; position:relative; box-shadow: #ddd; margin: auto; width: fit-content; height:min-content; padding-bottom:5%; padding-right:8%; background-color:#86412d4d;">
+    <h1 class="text-3xl mt-28 ml-10" style="color:white;"><strong>Similar Animal Rescues</strong></h1>
+</div>
+<div class="text-lg ml-10 mt-8 sm:mb-28 sm:w-10/12 flex sm:flex-row flex-col"
+    style="display: flex; border-radius: 4px; padding: 5px; align-items: center; justify-content: center; position:relative; box-shadow: #ddd; margin: auto; background-color:#090a0a4d; max-width:95%">
+    <span style="padding:20px; text-align: justify; font-family: 'Josefin Sans', sans-serif; color:white;">
+        <strong>
+            <ul>
+                <li><strong>Cat Stuck in Drainpipe</strong>: In a nearby suburb, firefighters recently rescued a cat that was trapped in a drainpipe for over 24 hours. They used a combination of water and gentle pulling to free the cat.</li>
+                <li><strong>Dog in a Fence</strong>: Another dog was rescued after getting its head stuck between metal bars of a fence. The rescue team used a hydraulic spreader to widen the bars and free the dog.</li>
+                <li><strong>Puppy in the US</strong>: In a similar incident in the United States, a puppy got its head stuck in a cinder block. Firefighters used soap and water to safely release the puppy.</li>
+                <li><strong>Kitten in the UK</strong>: In the UK, a kitten was rescued from a tight spot in a car engine. Firefighters had to partially dismantle the car to reach and free the kitten.</li>
+            </ul>
+        </strong>
+    </span>
+</div>
+
+<div class="relative w-[17.5rem] sm:w-[15.5rem] md:w-[19rem] lg:w-[27rem] xl:w-[35rem] h-80 flex justify-center items-center flex-col opacity-80"
+    style="display: flex; border-radius: 4px; align-items: center; justify-content: center; position:relative; box-shadow: #ddd; margin: auto; width: fit-content; height:min-content; padding-bottom:5%; padding-right:8%; background-color:#86412d4d;">
+    <h1 class="text-3xl mt-28 ml-10" style="color:white;"><strong>Tips for Preventing Such Incidents</strong></h1>
+</div>
+<div class="text-lg ml-10 mt-8 sm:mb-28 sm:w-10/12 flex sm:flex-row flex-col"
+    style="display: flex; border-radius: 4px; padding: 5px; align-items: center; justify-content: center; position:relative; box-shadow: #ddd; margin: auto; background-color:#090a0a4d; max-width:95%">
+    <span style="padding:20px; text-align: justify; font-family: 'Josefin Sans', sans-serif; color:white;">
+        <strong>
+            <ul>
+                <li><strong>Supervision</strong>: Always supervise young pets, especially in unfamiliar environments.</li>
+                <li><strong>Safety Checks</strong>: Regularly check your property for potential hazards, such as tight spaces where a pet might get stuck.</li>
+                <li><strong>Training</strong>: Train pets to avoid dangerous areas.</li>
+            </ul>
+        </strong>
+    </span>
+</div>
+
+<div class="relative w-[17.5rem] sm:w-[15.5rem] md:w-[19rem] lg:w-[27rem] xl:w-[35rem] h-80 flex justify-center items-center flex-col opacity-80"
+    style="display: flex; border-radius: 4px; align-items: center; justify-content: center; position:relative; box-shadow: #ddd; margin: auto; width: fit-content; height:min-content; padding-bottom:5%; padding-right:8%; background-color:#86412d4d;">
+    <h1 class="text-3xl mt-28 ml-10" style="color:white;"><strong>Community Impact and Response</strong></h1>
+</div>
+<div class="text-lg ml-10 mt-8 sm:mb-28 sm:w-10/12 flex sm:flex-row flex-col"
+    style="display: flex; border-radius: 4px; padding: 5px; align-items: center; justify-content: center; position:relative; box-shadow: #ddd; margin: auto; background-color:#090a0a4d; max-width:95%">
+    <span style="padding:20px; text-align: justify; font-family: 'Josefin Sans', sans-serif; color:white;">
+        <strong>
+            The local community in Mareeba has shown great support and appreciation for the firefighters' efforts. Many have praised the team's quick thinking and compassion. Social media posts about Bonnie's rescue have garnered positive reactions and shares, highlighting the importance of pet safety and community support in such situations.
+        </strong>
+    </span>
+</div>
 
 
-
-			<span style="padding:20px;text-align: justify;font-family: 'Josefin Sans', sans-serif;color:white;">
-				<strong>
-					A dog has been rescued from a tight spot by Queensland firefighters armed with a bottle of olive oil
-					and a lot of patience.
-					The puppy, named Bonnie, stuck its head through the middle of a wheel rim but couldn't pull itself
-					back out.
-					It was up to the firefighters at Mareeba Fire and Rescue to figure out a solution to the sticky
-					situation.
-					"We hear she's recovering well."
-
-				</strong>
-			</span>
 
 		</div>
 	</div>
